--- a/templates/administration/add/invoice.html
+++ b/templates/administration/add/invoice.html
@@ -60,9 +60,9 @@
 </head>
 <body>
 <!-- Content for Static Frame 'header_frame' -->
-<div id="logo_frame">
-    <img src="{{ header }}" alt="" style="width: 1000pt">
-</div>
+{#<div id="logo_frame">#}
+{#    <img src="{{ header }}" alt="" style="width: 1000pt">#}
+{#</div>#}
 
 <div id="pd_title">
     <h1 style="font-size: 40px; color: rgb(248, 124, 84); text-align: right; letter-spacing: 5px">INVOICE</h1>
